ci: Updated git leaks allow list to ignore solution files

--- a/scripts/config/gitleaks.toml
+++ b/scripts/config/gitleaks.toml
@@ -19,5 +19,6 @@ regexes = [
 paths = [
   '''.terraform.lock.hcl''',
   '''poetry.lock''',
-  '''yarn.lock'''
+  '''yarn.lock''',
+  '''\.sln'''
 ]
