feat/update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,10 @@
 !project.code-workspace
 
 # Please, add your custom content below!
-
+__azurite*.json
+__blobstorage__
+__queuestorage__
+*.sln
 
 # Builds
 bin
