chore/set ports to previous settings

--- a/src/EpisodeIntegrationService/ReceiveData/Properties/launchSettings.json
+++ b/src/EpisodeIntegrationService/ReceiveData/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "ReceiveAndProcessDataApp": {
+    "ReceiveData": {
       "commandName": "Project",
       "launchBrowser": false
     }
