--- a/src/EpisodeIntegrationService/ProcessData/Properties/launchSettings.json
+++ b/src/EpisodeIntegrationService/ProcessData/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "ReceiveAndProcessDataApp": {
+    "ProcessData": {
       "commandName": "Project",
-      "commandLineArgs": "--port 7171",
+      "commandLineArgs": "--port 7111",
       "launchBrowser": false
     }
   }
