feat/Updated functions to split data for downstream processing

--- a/src/EpisodeIntegrationService/ProcessData/Properties/launchSettings.json
+++ b/src/EpisodeIntegrationService/ProcessData/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "ProcessData": {
+    "processData": {
       "commandName": "Project",
-      "commandLineArgs": "--port 7111",
+      "commandLineArgs": "--port 7162",
       "launchBrowser": false
     }
   }
