--- a/src/EpisodeIntegrationService/ReceiveData/Properties/launchSettings.json
+++ b/src/EpisodeIntegrationService/ReceiveData/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "ReceiveData": {
       "commandName": "Project",
+      "commandLineArgs": "--port 7072",
       "launchBrowser": false
     }
   }
