--- a/src/ParticipantManagementService/UpdateParticipant/local.settings.json
+++ b/src/ParticipantManagementService/UpdateParticipant/local.settings.json
@@ -2,9 +2,9 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated"
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet"
   },
   "Host": {
-    "LocalHttpPort": 6000
+    "LocalHttpPort": 7074
   }
 }
