feat: Implemented Create Episode function in Episode Data Service

--- a/tests/EpisodeDataServiceTests/CreateEpisodeTests/CreateEpisodeTests.csproj
+++ b/tests/EpisodeDataServiceTests/CreateEpisodeTests/CreateEpisodeTests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\EpisodeManagementService\UpdateEpisode\UpdateEpisode.csproj" />
+    <ProjectReference Include="..\..\..\src\EpisodeDataService\CreateEpisode\CreateEpisode.csproj" />
     <ProjectReference Include="..\..\TestUtils\TestUtils.csproj" />
   </ItemGroup>
 
