--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,14 @@
 !project.code-workspace
 
 # Please, add your custom content below!
+
+# Azurite
 __azurite*.json
 __blobstorage__
 __queuestorage__
+
+# Tests
+TestResults
 
 # Builds
 bin
