--- a/src/EpisodeDataService/CreateEpisode/CreateEpisode.csproj
+++ b/src/EpisodeDataService/CreateEpisode/CreateEpisode.csproj
@@ -23,4 +23,7 @@
   <ItemGroup>
     <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Data\Data.csproj" />
+  </ItemGroup>
   </Project>
