--- a/src/EpisodeDataService/CreateEpisode/Properties/launchSettings.json
+++ b/src/EpisodeDataService/CreateEpisode/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "updateParticipant": {
+    "CreateEpisode": {
       "commandName": "Project",
-      "commandLineArgs": "--port 7253",
+      "commandLineArgs": "--port 7254",
       "launchBrowser": false
     }
   }
