--- a/src/EpisodeManagementService/CreateUpdateEpisode/local.settings.json
+++ b/src/EpisodeManagementService/CreateUpdateEpisode/local.settings.json
@@ -2,7 +2,8 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated"
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
+    "CreateEpisodeUrl": "http://localhost:6007/api/CreateEpisode"
   },
   "Host": {
     "LocalHttpPort": 6006
