--- a/src/EpisodeManagementService/CreateUpdateEpisode/CreateUpdateEpisode.csproj
+++ b/src/EpisodeManagementService/CreateUpdateEpisode/CreateUpdateEpisode.csproj
@@ -25,5 +25,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\Common\Common.csproj" />
+    <ProjectReference Include="..\..\Shared\Model\Model.csproj" />
   </ItemGroup>
   </Project>
