feat: Implemented CreateEpisode function in EpisodeDataService (#17)
* feat: Implemented Create Episode function in Episode Data Service

* test: Fixed tests

* style: Fixed file format issues

* refactor: Now using HttpClient for http requests in Common

* refactor: Updated namespaces

* build: Updated solution file

* refactor: Moved EF generated models in Model class library

* refactor: Renamed Common namespace

* style: Fixed file format issues

* refactor: Refactored SendHttpRequestAsync method

* style: Moved namespaces below using directives

* refactor: Removed old Episode model class

* fix: Fixed build errors

--- a/src/EpisodeDataService/CreateEpisode/CreateEpisode.csproj
+++ b/src/EpisodeDataService/CreateEpisode/CreateEpisode.csproj
@@ -23,4 +23,7 @@
   <ItemGroup>
     <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
   </ItemGroup>
-  </Project>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Data\Data.csproj" />
+  </ItemGroup>
+</Project>
