--- a/src/EpisodeIntegrationService/ProcessData/local.settings.json
+++ b/src/EpisodeIntegrationService/ProcessData/local.settings.json
@@ -2,7 +2,7 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet",
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
     "EpisodeManagementUrl": "http://localhost:7073/api/UpdateEpisode",
     "ParticipantManagementUrl": "http://localhost:7074/api/UpdateParticipant"
   },
