--- a/src/EpisodeIntegrationService/ProcessData/local.settings.json
+++ b/src/EpisodeIntegrationService/ProcessData/local.settings.json
@@ -3,7 +3,7 @@
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
-    "EpisodeManagementUrl": "http://localhost:6006/api/CreateUpdateEpisode",
+    "EpisodeManagementUrl": "http://localhost:6007/api/updateEpisode",
     "ParticipantManagementUrl": "http://localhost:7074/api/UpdateParticipant"
   },
   "Host": {
