--- a/tests/ParticipantManagementServiceTests/GetParticipantTests/GetParticipantTests.csproj
+++ b/tests/ParticipantManagementServiceTests/GetParticipantTests/GetParticipantTests.csproj
@@ -9,6 +9,19 @@
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
+<ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
+  </ItemGroup>
+
+
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\ParticipantManagementService\GetParticipant\GetParticipant.csproj" />
     <ProjectReference Include="..\..\TestUtils\TestUtils.csproj" />
