--- a/src/EpisodeIntegrationService/ReceiveData/local.settings.json
+++ b/src/EpisodeIntegrationService/ReceiveData/local.settings.json
@@ -2,7 +2,8 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet"
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
+    "ProcessDataURL": "http://localhost:7072/api/ProcessData"
   },
   "Host": {
     "LocalHttpPort": 7071
