feat: send participant and episode data from episode integration service to participant and episode management services (#15)
* feat/Updated functions to split data for downstream processing

* feat/add test data cases

* chore/prettier format happy path test data

* update Episode and Participant unit tests

* chore/amend mock data

* feat/add unit tests for Receive and Process data

* refactor/partial ProcessData to use IHttpRequestService

* refactor/ProcessData WIP

* fix: Fixed some build errors

* feat/vs code config

* chore/bump dotnet 6 to 8

* refactor/ProcessData function

* chore/ProcessData add logging

* refactor/ProcessData and ReceiveData

* refactor/Participant ok, Episode null

* refactor/additional logging in Episode functions

* refactor/working episode and participant downstream

* chore/prettier

* refactor/tidy up
CreateUpdateEpisode

* feat/update gitignore

* refactor/reduce logging

* refactor/revert UpdateParticipant code to main version

* refactor/use file based namespace

* refactor/dotnet isolated

* refactor/remove .vscode folders unused

* refactor/reverted missing Participant code

* refactor/receive data function to use HttpRequestService

* refactor:working processdata function serialisation

* test: add ProcessData tests

* style: prettier

* chore: remove unused

* chore: remove unused logs

---------

Co-authored-by: OswellHita <oswell.hita1@nhs.net>
Co-authored-by: alex-clayton-1 <alexander.clayton1@nhs.net>

--- a/src/EpisodeIntegrationService/ProcessData/local.settings.json.template
+++ b/src/EpisodeIntegrationService/ProcessData/local.settings.json.template
@@ -2,9 +2,11 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet"
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
+    "EpisodeManagementUrl": "http://localhost:6006/api/CreateUpdateEpisode",
+    "ParticipantManagementUrl": "http://localhost:7074/api/UpdateParticipant"
   },
   "Host": {
-    "LocalHttpPort": 7111
+    "LocalHttpPort": 7072
   }
 }
