--- a/src/EpisodeIntegrationService/ReceiveData/local.settings.json.template
+++ b/src/EpisodeIntegrationService/ReceiveData/local.settings.json.template
@@ -1,7 +1,11 @@
 {
   "IsEncrypted": false,
   "Values": {
-      "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-      "FUNCTIONS_WORKER_RUNTIME": "dotnet"
+    "AzureWebJobsStorage": "UseDevelopmentStorage=true",
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
+    "ProcessDataURL": "http://localhost:7072/api/ProcessData"
+  },
+  "Host": {
+    "LocalHttpPort": 7071
   }
 }
