--- a/src/BIAnalyticsService/RetrieveData/RetrieveData.csproj
+++ b/src/BIAnalyticsService/RetrieveData/RetrieveData.csproj
@@ -27,5 +27,6 @@
     <ProjectReference Include="..\..\Shared\Data\Data.csproj" />
     <ProjectReference Include="..\..\Shared\Common\Common.csproj" />
     <ProjectReference Include="..\..\Shared\Model\Model.csproj" />
+    <ProjectReference Include="..\..\ParticipantManagementService\GetParticipant\GetParticipant.csproj" />
   </ItemGroup>
 </Project>
