--- a/.github/workflows/stage-1-commit.yaml
+++ b/.github/workflows/stage-1-commit.yaml
@@ -42,6 +42,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Full history is needed to scan all commits
+          submodules: 'true'
       - name: "Scan secrets"
         uses: ./.github/actions/scan-secrets
   check-file-format:
