feature: set port for RetrieveMeshFile function

--- a/src/BSSelectIntegrationService/RetrieveMeshFile/local.settings.json.template
+++ b/src/BSSelectIntegrationService/RetrieveMeshFile/local.settings.json.template
@@ -11,5 +11,8 @@
         "MeshSharedKey": "TestKey",
         "MeshKeyPassphrase":"test123"
 
+    },
+    "Host": {
+      "LocalHttpPort": 6777
     }
 }
