--- a/src/EpisodeIntegrationService/ProcessData/ProcessData.csproj
+++ b/src/EpisodeIntegrationService/ProcessData/ProcessData.csproj
@@ -22,5 +22,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\Common\Common.csproj" />
+    <ProjectReference Include="..\..\Shared\Model\Model.csproj" />
   </ItemGroup>
 </Project>
