--- a/src/BIAnalyticsService/RetrieveData/local.settings.json.template
+++ b/src/BIAnalyticsService/RetrieveData/local.settings.json.template
@@ -2,8 +2,7 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
-    "ServiceInsightsDbConnectionString": "YOUR_CONNECTION_STRING"
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated"
   },
   "Host": {
     "LocalHttpPort": 6009
