--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,7 @@
 name: service-insights
 
 services:
-  # External Dependencies
+  # # External Dependencies
   # azurite:
   #   container_name: azurite
   #   image: mcr.microsoft.com/azure-storage/azurite
@@ -95,279 +95,96 @@ services:
   #     - DemographicURI=http://localhost:7076/api/DemographicDataFunction
   #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
 
-  # # Participant Management Service
-  # add-participant:
-  #   container_name: add-participant
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: ParticipantManagementServices/addParticipant/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7062
-  #     - DSaddParticipant=http://localhost:7066/api/CreateParticipant
-  #     - DSmarkParticipantAsEligible=http://localhost:7067/api/markParticipantAsEligible
-  #     - DemographicURIGet=http://localhost:7076/api/DemographicDataFunction
-  #     - StaticValidationURL=http://localhost:7074/api/StaticValidation
-  #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-  #     - CohortDistributionServiceURL=http://localhost:7082/api/CreateCohortDistribution
-
-  # remove-participant:
-  #   container_name: remove-participant
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: ParticipantManagementServices/RemoveParticipant/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7063
-  #     - markParticipantAsIneligible=http://localhost:7068/api/markParticipantAsIneligible
-  #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-  #     - DemographicURIGet=http://localhost:7076/api/DemographicDataFunction
-  #     - RemoveCohortDistributionURL=http://localhost:7079/api/RemoveCohortDistributionData
-
-  # update-participant:
-  #   container_name: update-participant
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: ParticipantManagementServices/updateParticipant/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7065
-  #     - UpdateParticipant=http://localhost:7069/api/updateParticipantDetails
-  #     - StaticValidationURL=http://localhost:7074/api/StaticValidation
-  #     - DemographicURIGet=http://localhost:7076/api/DemographicDataFunction
-  #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-
-  # # Screening Data Service
-  # create-participant:
-  #   container_name: create-participant
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: screeningDataServices/createParticipant/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7066
-  #     - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
-  #     - DtOsDatabaseConnectionString=Server=localhost,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
-  #     - LookupValidationURL=http://localhost:7075/api/LookupValidation
-  #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-  #     - AzureWebJobsStorage=UseDevelopmentStorage=true
-
-  # mark-participant-as-eligible:
-  #   container_name: mark-participant-as-eligible
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: screeningDataServices/markParticipantAsEligible/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7067
-  #     - DtOsDatabaseConnectionString=Server=localhost,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
-  #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-
-  # mark-participant-as-ineligible:
-  #   container_name: mark-participant-as-ineligible
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: screeningDataServices/markParticipantAsIneligible/Dockerfile
-  #   environment:
-  #     - AzureWebJobsStorage=UseDevelopmentStorage=true
-  #     - ASPNETCORE_URLS=http://*:7068
-  #     - DtOsDatabaseConnectionString=Server=localhost,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
-  #     - LookupValidationURL=http://localhost:7075/api/LookupValidation
-  #     - StaticValidationURL=http://localhost:7074/api/StaticValidation
-  #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-  #     - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
-
-  # update-participant-details:
-  #   container_name: update-participant-details
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: screeningDataServices/updateParticipantDetails/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7069
-  #     - DtOsDatabaseConnectionString=Server=localhost,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
-  #     - LookupValidationURL=http://localhost:7075/api/LookupValidation
-  #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-
-  # create-exception:
-  #   container_name: create-exception
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: ExceptionHandling/CreateException/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7070
-  #     - DtOsDatabaseConnectionString=Server=localhost,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
-
-  # get-validation-exceptions:
-  #   container_name: get-validation-exceptions
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: screeningDataServices/GetValidationExceptions/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7071
-  #     - DtOsDatabaseConnectionString=Server=localhost,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
-
-  # demographic-data-service:
-  #   container_name: demographic-data-service
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: screeningDataServices/DemographicDataService/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7072
-  #     - DtOsDatabaseConnectionString=Server=localhost,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
-  #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-
-  # # Screening Validation Service
-  # file-validation:
-  #   container_name: file-validation
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: ScreeningValidationService/FileValidation/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7073
-  #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-  #     - inboundBlobName=inbound
-  #     - AzureWebJobsStorage=UseDevelopmentStorage=true
-
-  # static-validation:
-  #   container_name: static-validation
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: ScreeningValidationService/StaticValidation/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7074
-  #     - CreateValidationExceptionURL=http://localhost:7070/api/CreateValidationException
-  #     - BlobContainerName=rules
-  #     - AzureWebJobsStorage=UseDevelopmentStorage=true
-  #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-
-  # lookup-validation:
-  #   container_name: lookup-validation
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: ScreeningValidationService/LookupValidation/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7075
-  #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-  #     - BlobContainerName=rules
-  #     - AzureWebJobsStorage=UseDevelopmentStorage=true
-
-  # # Demographic Services
-  # demographic-data-management:
-  #   container_name: demographic-data-management
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: DemographicServices/DemographicDataManagementFunction/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7076
-  #     - DemographicDataServiceURI=http://localhost:7072/api/DemographicDataService
-  #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-
-  # # Cohort Distribution Services
-  # add-cohort-distribution-data:
-  #   container_name: add-cohort-distribution-data
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: CohortDistributionServices/AddCohortDistributionData/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7077
-  #     - DtOsDatabaseConnectionString=Server=localhost,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
-  #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-
-  # retrieve-distribution-data:
-  #   container_name: retrieve-distribution-data
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: CohortDistributionServices/RetrieveCohortDistribution/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7078
-  #     - DtOsDatabaseConnectionString=Server=localhost,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
-  #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-
-  # remove-from-cohort-distribution-data:
-  #   container_name: remove-from-cohort-distribution-data
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: CohortDistributionServices/RemoveCohortDistributionData/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7079
-  #     - DtOsDatabaseConnectionString=Server=localhost,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
-  #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-
-  # transform-data-service:
-  #   container_name: transform-data-service
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: CohortDistributionServices/TransformDataService/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7080
-  #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-  #     - DtOsDatabaseConnectionString=Server=localhost,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
-
-  # allocate-service-provider:
-  #   container_name: allocate-service-provider
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: CohortDistributionServices/ServiceProviderAllocationService/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7081
-  #     - CreateValidationExceptionURL=http://localhost:7070/api/CreateValidationException
-
-  # create-cohort-distribution:
-  #   container_name: create-cohort-distribution
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: CohortDistributionServices/CreateCohortDistribution/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7082
-  #     - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-  #     - AllocateScreeningProviderURL=http://localhost:7081/api/AllocateServiceProviderToParticipantByService
-  #     - TransformDataServiceURL=http://localhost:7080/api/TransformDataService
-  #     - RetrieveParticipantDataURL=http://localhost:7083/api/RetrieveParticipantData
-  #     - AddCohortDistributionURL=http://localhost:7077/api/AddCohortDistributionData
-  #     - ValidateCohortDistributionRecordURL = http://localhost:7084/api/ValidateCohortDistributionRecord
-
+  # Participant Management Service
   get-participant:
     container_name: get-participant
     # network_mode: host
     build:
       context: ./src/
-      dockerfile: ./DockerfileGetParticipant
+      dockerfile: ./ParticipantManagementService/GetParticipant/Dockerfile
     ports:
       - "7073:7073"
     environment:
       - ASPNETCORE_URLS=http://*:7073
-      # - ExceptionFunctionURL=http://localhost:7070/api/CreateException
-      # - DtOsDatabaseConnectionString=Server=localhost,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
 
-  # validate-cohort-distribution-record:
-  #   container_name: validate-cohort-distribution-record
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: CohortDistributionServices/ValidateCohortDistributionRecord/dockerfile
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:7084
-  #     - LookupValidationURL=http://localhost:7075/api/LookupValidation
-  #     - DtOsDatabaseConnectionString=Server=localhost,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
+  update-participant:
+    container_name: update-participant
+    # network_mode: host
+    build:
+      context: ./src/
+      dockerfile: ./ParticipantManagementService/GetParticipant/Dockerfile
+    ports:
+      - "7074:7074"
+    environment:
+      - ASPNETCORE_URLS=http://*:7074
 
-  # devops-testing-service:
-  #   container_name: devops-testing-service
-  #   network_mode: host
-  #   build:
-  #     context: ./src/Functions/
-  #     dockerfile: DevOpsTestingService/Dockerfile
+  # Episode Data Service
+  create-episode:
+    container_name: create-episode
+    # network_mode: host
+    build:
+      context: ./src/
+      dockerfile: ./EpisodeDataService/CreateEpisode/Dockerfile
+    ports:
+      - "6007:6007"
+    environment:
+      - ASPNETCORE_URLS=http://*:6007
+      - ServiceInsightsDbConnectionString=Server=localhost,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
+
+  get-episode:
+    container_name: get-episode
+    # network_mode: host
+    build:
+      context: ./src/
+      dockerfile: ./EpisodeDataService/GetEpisode/Dockerfile
+    ports:
+      - "6070:6070"
+    environment:
+      - ASPNETCORE_URLS=http://*:6070
+      - ServiceInsightsDbConnectionString=Server=localhost,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
+
+  # Episode Integration Service
+  receive-data:
+    container_name: receive-data
+    # network_mode: host
+    build:
+      context: ./src/
+      dockerfile: ./EpisodeIntegrationService/ReceiveData/Dockerfile
+    ports:
+      - "7071:7071"
+    environment:
+      - ASPNETCORE_URLS=http://*:7071
+
+  process-data:
+    container_name: process-data
+    # network_mode: host
+    build:
+      context: ./src/
+      dockerfile: ./EpisodeIntegrationService/ProcessData/Dockerfile
+    ports:
+      - "7072:7072"
+    environment:
+      - ASPNETCORE_URLS=http://*:7072
+
+  # Episode Management Service
+  create-update-episode:
+    container_name: create-update-episode
+    # network_mode: host
+    build:
+      context: ./src/
+      dockerfile: ./EpisodeManagementService/CreateUpdateEpisode/Dockerfile
+    ports:
+      - "6006:6006"
+    environment:
+      - ASPNETCORE_URLS=http://*:6006
+
+  mgmt-get-episode:
+    container_name: mgmt-get-episode
+    # network_mode: host
+    build:
+      context: ./src/
+      dockerfile: ./EpisodeManagementService/GetEpisode/Dockerfile
+    ports:
+      - "6060:6060"
+    environment:
+      - ASPNETCORE_URLS=http://*:6060
