feat: updating the unit tests and renaming/restructuring files

--- a/tests/BIAnalyticsDataServiceTests/CreateParticipantScreeningEpisodeTests.csproj
+++ b/tests/BIAnalyticsDataServiceTests/CreateParticipantScreeningEpisodeTests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\AnalyticsDataService\SaveTransformedData\SaveTransformedData.csproj" />
+    <ProjectReference Include="..\..\src\BIAnalyticsDataService\CreateParticipantScreeningEpisode\CreateParticipantScreeningEpisode.csproj" />
     <ProjectReference Include="..\TestUtils\TestUtils.csproj" />
   </ItemGroup>
 
