chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,8 @@ TestResults
 bin
 obj
 
-# local.settings.json
+# Local Settings
 local.settings.json
 
-# local environment
+# Local Environment
 .env
