--- a/tests/BIAnalyticsDataServiceTests/CreateParticipantScreeningEpisodeTests/CreateParticipantScreeningEpisodeTests.csproj
+++ b/tests/BIAnalyticsDataServiceTests/CreateParticipantScreeningEpisodeTests/CreateParticipantScreeningEpisodeTests.csproj
@@ -21,8 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\AnalyticsDataService\SaveTransformedData\SaveTransformedData.csproj" />
-    <ProjectReference Include="..\TestUtils\TestUtils.csproj" />
+    <ProjectReference Include="..\..\..\src\BIAnalyticsDataService\CreateParticipantScreeningEpisode\CreateParticipantScreeningEpisode.csproj" />
+    <ProjectReference Include="..\..\TestUtils\TestUtils.csproj" />
   </ItemGroup>
 
 </Project>
