--- a/src/MeshIntegrationService/RetrieveMeshFile/local.settings.json.template
+++ b/src/MeshIntegrationService/RetrieveMeshFile/local.settings.json.template
@@ -5,8 +5,7 @@
         "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
         "MeshApiBaseUrl" : "http://localhost:8700/messageexchange",
         "BSSMailBox": "X26ABC1",
-        "bssfolder_STORAGE":"UseDevelopmentStorage=true",
-        "bsscontainer_NAME": "sample-container",
+        "BSSContainerName": "sample-container",
         "MeshPassword": "password",
         "MeshSharedKey": "TestKey",
         "MeshKeyPassphrase":"test123"
