--- a/src/MeshIntegrationService/RetrieveMeshFile/Properties/launchSettings.json
+++ b/src/MeshIntegrationService/RetrieveMeshFile/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "RetriveMeshFile": {
+    "RetrieveMeshFile": {
       "commandName": "Project",
       "commandLineArgs": "--port 7109",
       "launchBrowser": false
