feat: add mesh mailbox retrival function (#26)
* feat: add MeshRetrievalFunction

* feat: RetrieveMeshFile configuration

* feat: add missing parts

* refactor: removed exception handler and other services

* fix: added the destination container property name.

* test: add tests for RetrieveMeshFile

* refactor: removed unnecessary usings

* test: adding submodules to stage-2-test pipeline

* cicd: adding submodule to checkout

* feature: set port for RetrieveMeshFile function

* feature: add template with defaults for RetrieveMeshFile function

* chore: remove unused Dockerfile

* refactor: rename BSSelectIntegrationService to MeshIntegrationService

* refactor: set namespaces to NHS.ServiceInsights...

* refactor: remove unnecessary packages

* refactor: go with WorkerDefaults rather than WebApplication

* refactor: now we can remove unused AspNetCore package

* chore: update sln

* chore: remove duplicate entries in sln

* feature: set cron schedule to every 5 mins

* chore: for consistency move namespace section to below using section

* chore: rename test folder for Mesh tests

* chore: update gitignore

* chore: rename BSSelectIntegrationServiceTests to MeshIntegrationServiceTests in sln

* chore: update gitignore

* docs: update comment

* chore: align package versions

* chore: temporary file rename

* chore: final file rename

* chore: rename file temporarily

* chore: rename file with camel case

* chore: update namespace and comments

* refactor: adjust namespaces and settings to align with standards

* chore: folder rename

* chore: fix typo

* chore: fix typos

* chore: namespace updates

* chore: temporarily rename folder

* chore: rename folder to pascal case

* chore: remove unused in sln

* feature: add RetrieveMeshFile to sln

---------

Co-authored-by: OswellHita <oswell.hita1@nhs.net>

--- a/.github/workflows/stage-2-test.yaml
+++ b/.github/workflows/stage-2-test.yaml
@@ -40,6 +40,8 @@ jobs:
     steps:
       - name: "Checkout code"
         uses: actions/checkout@v4
+        with:
+          submodules: 'true'
       - name: "Run unit test suite"
         run: |
           make test-unit
