--- a/src/EpisodeManagementService/CreateUpdateEpisode/local.settings.json.template
+++ b/src/EpisodeManagementService/CreateUpdateEpisode/local.settings.json.template
@@ -3,7 +3,9 @@
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
-    "CreateEpisodeUrl": "http://localhost:6007/api/CreateEpisode"
+    "CreateEpisodeUrl": "http://localhost:6007/api/CreateEpisode",
+    "GetEpisodeUrl": "http://localhost:6060/api/GetEpisode",
+    "UpdateEpisodeUrl": "http://localhost:7777/api/UpdateEpisode"
   },
   "Host": {
     "LocalHttpPort": 6006
