--- a/tests/BIAnalyticsServiceTests/CreateDataAssetsTests/CreateDataAssetsTests.csproj
+++ b/tests/BIAnalyticsServiceTests/CreateDataAssetsTests/CreateDataAssetsTests.csproj
@@ -23,8 +23,8 @@
 
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\BIAnalyticsService\CreateDataAssets\CreateDataAssets.csproj" />
-    <ProjectReference Include="..\TestUtils\TestUtils.csproj" />
+    <ProjectReference Include="..\..\..\src\BIAnalyticsService\CreateDataAssets\CreateDataAssets.csproj" />
+    <ProjectReference Include="..\..\TestUtils\TestUtils.csproj" />
   </ItemGroup>
 
 </Project>
