chore: fix db-setup container

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,29 +1,29 @@
 name: service-insights
 
 # Define network
-networks:
-  app-network:
-    driver: bridge
+# networks:
+#   app-network:
+#     driver: bridge
 
 # Define services
 services:
   # External Dependencies
   azurite:
     container_name: azurite
+    network_mode: host
     image: mcr.microsoft.com/azure-storage/azurite
     command: azurite --silent
     # networks:
     #   - app-network
-    network_mode: host
     ports:
       - "10000:10000"
 
   azurite-setup:
     container_name: azurite-setup
+    network_mode: host
     build:
       context: ./scripts
       dockerfile: ./azurite/Dockerfile
-    network_mode: host
     depends_on:
       - azurite
     environment:
@@ -37,8 +37,8 @@ services:
     environment:
       - ACCEPT_EULA=Y
       - MSSQL_SA_PASSWORD=${PASSWORD}
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     ports:
       - "1433:1433"
     healthcheck:
@@ -55,7 +55,9 @@ services:
   db-setup:
     container_name: db-setup
     network_mode: host
-    build: ./database
+    build:
+      context: ./scripts/
+      dockerfile: ./database/Dockerfile
     depends_on:
       sql-edge:
         condition: service_healthy
@@ -65,43 +67,15 @@ services:
     # networks:
     #   - app-network
 
-  # # Analytics Data Service
-  # analytics-save-transformed-data:
-  #   container_name: analytics-save-transformed-data
-  #   # network_mode: host
-  #   build:
-  #     context: ./src/
-  #     dockerfile: ./AnalyticsDataService/SaveTransformedData/Dockerfile
-  #   networks:
-  #     - app-network
-  #   ports:
-  #     - "6008:6008"
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:6008
-
-  # # BI Analytics Service
-  # analytics-retrieve-data:
-  #   container_name: analytics-retrieve-data
-  #   # network_mode: host
-  #   build:
-  #     context: ./src/
-  #     dockerfile: ./BIAnalyticsService/RetrieveData/Dockerfile
-  #   networks:
-  #     - app-network
-  #   ports:
-  #     - "6009:6009"
-  #   environment:
-  #     - ASPNETCORE_URLS=http://*:6009
-
   # Episode Data Service
   create-episode:
     container_name: create-episode
-    # network_mode: host
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./EpisodeDataService/CreateEpisode/Dockerfile
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     ports:
       - "6007:6007"
     environment:
@@ -110,12 +84,12 @@ services:
 
   get-episode:
     container_name: get-episode
-    # network_mode: host
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./EpisodeDataService/GetEpisode/Dockerfile
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     ports:
       - "6070:6070"
     environment:
@@ -125,12 +99,12 @@ services:
   # Episode Integration Service
   receive-data:
     container_name: receive-data
-    # network_mode: host
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./EpisodeIntegrationService/ReceiveData/Dockerfile
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     ports:
       - "7071:7071"
     environment:
@@ -139,12 +113,12 @@ services:
 
   process-data:
     container_name: process-data
-    # network_mode: host
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./EpisodeIntegrationService/ProcessData/Dockerfile
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     ports:
       - "7072:7072"
     environment:
@@ -155,12 +129,12 @@ services:
   # Episode Management Service
   create-update-episode:
     container_name: create-update-episode
-    # network_mode: host
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./EpisodeManagementService/CreateUpdateEpisode/Dockerfile
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     ports:
       - "6006:6006"
     environment:
@@ -169,12 +143,12 @@ services:
 
   get-episode-mgmt:
     container_name: get-episode-mgmt
-    # network_mode: host
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./EpisodeManagementService/GetEpisode/Dockerfile
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     ports:
       - "6060:6060"
     environment:
@@ -184,12 +158,12 @@ services:
   # Participant Management Service
   get-participant:
     container_name: get-participant
-    # network_mode: host
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./ParticipantManagementService/GetParticipant/Dockerfile
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     ports:
       - "7073:7073"
     environment:
@@ -197,12 +171,12 @@ services:
 
   update-participant:
     container_name: update-participant
-    # network_mode: host
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./ParticipantManagementService/GetParticipant/Dockerfile
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     ports:
       - "7074:7074"
     environment:
